# modi

./: .gitignore  README.md  co.tauos.Modi.Devel.json~  co.tauos.Modi.json  com.fyralabs.Modi.Devel.json  com.fyralabs.Modi.json  meson.build
.github/workflows/: deploy.yml
data/: desktop.in  gresource.xml  meson.build  metainfo.xml.in  style-dark.css  style.css
data/ui/: viewer.ui  window.ui
src/: Application.vala  Canvas.vala  MainWindow.vala  PictureFile.vala  Viewer.vala
